--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.1",
     "localforage": "^1.10.0",
@@ -25,6 +24,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.0",
